--- a/roles/confluent.zookeeper/handlers/main.yml
+++ b/roles/confluent.zookeeper/handlers/main.yml
@@ -1,4 +1,6 @@
+- name: reload systemd
+  command: systemctl daemon-reload
 - name: restart zookeeper
   systemd:
-    name: "{{zookeeper_service_name}}"
+    name: "{{zookeeper.service_name}}"
     state: restarted
