--- a/roles/confluent.zookeeper/tasks/main.yml
+++ b/roles/confluent.zookeeper/tasks/main.yml
@@ -1,14 +1,15 @@
 # Install Packages
 - name: Install the Zookeeper Packages
   yum:
-    name: "{{item}}{{confluent_package_redhat_suffix}}"
+    name: "{{item}}-{{confluent.package_version}}"
     state: latest
   loop: "{{zookeeper_packages}}"
   when: ansible_os_family == "RedHat"
 
 - name: Install the Zookeeper Packages
   apt:
-    name: "{{item}}{{confluent_package_debian_suffix}}"
+    name: "{{item}}={{confluent.package_version}}"
+    update_cache: yes
   loop: "{{zookeeper_packages}}"
   when: ansible_os_family == "Debian"
 
@@ -30,7 +31,7 @@
     group: "{{zookeeper.group}}"
     mode: '650'
     recurse: yes
-  when: "'GSSAPI' in kafka_broker_sasl_enabled_mechanisms"
+  when: sasl_protocol == 'kerberos'
 
 - name: Copy in Keytab File
   copy:
@@ -39,17 +40,9 @@
     owner: "{{zookeeper.user}}"
     group: "{{zookeeper.group}}"
     mode: '600'
-  when: "'GSSAPI' in kafka_broker_sasl_enabled_mechanisms"
+  when: sasl_protocol == 'kerberos'
   notify:
     - restart zookeeper
-
-- name: Set Zookeeper dataDir ownership
-  file:
-    path: "{{zookeeper.properties.dataDir}}"
-    owner: "{{zookeeper.user}}"
-    group: "{{zookeeper.group}}"
-    state: directory
-    mode: 0750
 
 - name: Create Zookeeper myid File
   template:
@@ -77,7 +70,7 @@
     owner: "{{zookeeper.user}}"
     mode: '764'
     recurse: yes
-
+  
 - name: Create Zookeeper log4j config
   template:
     src: zookeeper_log4j.properties.j2
@@ -91,17 +84,17 @@
 - name: Create Zookeeper Jaas config
   template:
     src: zookeeper_jaas.conf.j2
-    dest: "{{zookeeper.jaas_file}}"
+    dest: "{{zookeeper_jaas_file}}"
     mode: 0640
     owner: "{{zookeeper.user}}"
     group: "{{zookeeper.group}}"
-  when: "'GSSAPI' in kafka_broker_sasl_enabled_mechanisms"
+  when: sasl_protocol == "kerberos"
   notify:
     - restart zookeeper
 
 - name: Create Service Override Directory
   file:
-    path: "{{zookeeper.systemd_override | dirname}}"
+    path: "{{zookeeper.systemd_override}}"
     owner: "{{zookeeper.user}}"
     group: "{{zookeeper.group}}"
     state: directory
@@ -110,7 +103,7 @@
 - name: Write Service Overrides
   template:
     src: override.conf.j2
-    dest: "{{zookeeper.systemd_override}}"
+    dest: "{{zookeeper.systemd_override}}/override.conf"
     mode: 0640
     owner: "{{zookeeper.user}}"
     group: "{{zookeeper.group}}"
@@ -127,6 +120,6 @@
 
 - name: Start Zookeeper Service
   systemd:
-    name: "{{zookeeper_service_name}}"
-    enabled: yes
-    state: started
+    name: "{{zookeeper.service_name}}"
+    enabled: "{{zookeeper.systemd.enabled}}"
+    state: "{{zookeeper.systemd.state}}"
