--- a/roles/confluent.control_center/handlers/main.yml
+++ b/roles/confluent.control_center/handlers/main.yml
@@ -1,5 +1,6 @@
----
+- name: reload systemd
+  command: systemctl daemon-reload
 - name: restart control center
   systemd:
-    name: "{{control_center_service_name}}"
+    name: "{{control_center.service_name}}"
     state: restarted
