--- a/roles/confluent.control_center/tasks/main.yml
+++ b/roles/confluent.control_center/tasks/main.yml
@@ -1,14 +1,15 @@
 # Install Packages
 - name: Install the Control Center Packages
   yum:
-    name: "{{item}}{{confluent_package_redhat_suffix}}"
+    name: "{{item}}-{{confluent.package_version}}"
     state: latest
   loop: "{{control_center_packages}}"
   when: ansible_os_family == "RedHat"
 
 - name: Install the Control Center Packages
   apt:
-    name: "{{item}}{{confluent_package_debian_suffix}}"
+    name: "{{item}}={{confluent.package_version}}"
+    update_cache: yes
   loop: "{{control_center_packages}}"
   when: ansible_os_family == "Debian"
 
@@ -24,23 +25,13 @@
     system: yes
     group: "{{control_center.group}}"
 
-- import_role:
-    name: confluent.ssl
-  vars:
-    truststore_storepass: "{{control_center_truststore_storepass}}"
-    truststore_path: "{{control_center_truststore_path}}"
-    keystore_path: "{{control_center_keystore_path}}"
-    keystore_storepass: "{{control_center_keystore_storepass}}"
-    keystore_keypass: "{{control_center_keystore_keypass}}"
-  when: control_center_ssl_enabled|bool or kafka_broker_listeners[control_center_kafka_listener_name]['ssl_enabled'] | default(ssl_enabled) | bool
-
 - name: Create Keytabs Directory
   file:
     path: "{{kerberos.keytab_dir}}"
     group: "{{control_center.group}}"
     mode: '650'
     recurse: yes
-  when: kafka_broker_listeners[control_center_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == 'kerberos'
 
 - name: Copy in Keytab File
   copy:
@@ -49,7 +40,7 @@
     mode: '600'
     owner: "{{control_center.user}}"
     group: "{{control_center.group}}"
-  when: kafka_broker_listeners[control_center_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == 'kerberos'
   notify:
     - restart control center
 
@@ -83,7 +74,7 @@
 
 - name: Create Service Override Directory
   file:
-    path: "{{control_center.systemd_override | dirname}}"
+    path: "{{control_center.systemd_override}}"
     owner: "{{control_center.user}}"
     group: "{{control_center.group}}"
     state: directory
@@ -92,7 +83,7 @@
 - name: Write Service Overrides
   template:
     src: override.conf.j2
-    dest: "{{control_center.systemd_override}}"
+    dest: "{{control_center.systemd_override}}/override.conf"
     mode: 0640
     owner: "{{control_center.user}}"
     group: "{{control_center.group}}"
@@ -109,6 +100,6 @@
 
 - name: Start Control Center Service
   systemd:
-    name: "{{control_center_service_name}}"
-    enabled: yes
-    state: started
+    name: "{{control_center.service_name}}"
+    enabled: "{{control_center.systemd.enabled}}"
+    state: "{{control_center.systemd.state}}"
