--- a/roles/confluent.kafka_broker/tasks/main.yml
+++ b/roles/confluent.kafka_broker/tasks/main.yml
@@ -1,15 +1,15 @@
----
 # Install Packages
 - name: Install the Kafka Broker Packages
   yum:
-    name: "{{item}}{{confluent_package_redhat_suffix}}"
+    name: "{{item}}-{{confluent.package_version}}"
     state: latest
   loop: "{{kafka_broker_packages}}"
   when: ansible_os_family == "RedHat"
 
 - name: Install the Kafka Broker Packages
   apt:
-    name: "{{item}}{{confluent_package_debian_suffix}}"
+    name: "{{item}}={{confluent.package_version}}"
+    update_cache: yes
   loop: "{{kafka_broker_packages}}"
   when: ansible_os_family == "Debian"
 
@@ -25,23 +25,13 @@
     system: yes
     group: "{{kafka_broker.group}}"
 
-- import_role:
-    name: confluent.ssl
-  vars:
-    truststore_storepass: "{{kafka_broker_truststore_storepass}}"
-    truststore_path: "{{kafka_broker_truststore_path}}"
-    keystore_path: "{{kafka_broker_keystore_path}}"
-    keystore_storepass: "{{kafka_broker_keystore_storepass}}"
-    keystore_keypass: "{{kafka_broker_keystore_keypass}}"
-  when: kafka_broker_listeners | ssl_required(ssl_enabled)
-
 - name: Create Keytabs Directory
   file:
     path: "{{kerberos.keytab_dir}}"
     group: "{{kafka_broker.group}}"
     mode: '650'
     recurse: yes
-  when: "'GSSAPI' in kafka_broker_sasl_enabled_mechanisms"
+  when: sasl_protocol == 'kerberos'
 
 - name: Copy in Keytab File
   copy:
@@ -50,9 +40,9 @@
     mode: '600'
     owner: "{{kafka_broker.user}}"
     group: "{{kafka_broker.group}}"
-  when: "'GSSAPI' in kafka_broker_sasl_enabled_mechanisms"
+  when: sasl_protocol == 'kerberos'
   notify:
-    - Restart Kafka
+    - restart kafka
 
 - name: Create Kafka Broker Data Directories
   file:
@@ -71,7 +61,7 @@
     owner: "{{kafka_broker.user}}"
     group: "{{kafka_broker.group}}"
   notify:
-    - Restart Kafka
+    - restart kafka
 
 - name: Create Logs Directory
   file:
@@ -80,7 +70,7 @@
     owner: "{{kafka_broker.user}}"
     mode: '764'
     recurse: yes
-
+  
 - name: Create Kafka Broker log4j Config
   template:
     src: kafka_server_log4j.properties.j2
@@ -89,28 +79,18 @@
     owner: "{{kafka_broker.user}}"
     group: "{{kafka_broker.group}}"
   notify:
-    - Restart Kafka
+    - restart kafka
 
 - name: Create Kafka Broker Jaas Config
   template:
     src: kafka_server_jaas.conf.j2
-    dest: "{{kafka_broker.jaas_file}}"
+    dest: "{{kafka_broker_jaas_file}}"
     mode: 0640
     owner: "{{kafka_broker.user}}"
     group: "{{kafka_broker.group}}"
-  when: "'GSSAPI' in kafka_broker_sasl_enabled_mechanisms"
+  when: sasl_protocol == "kerberos"
   notify:
-    - Restart Kafka
-
-- name: Create SCRAM Users
-  shell: |
-    kafka-configs --zookeeper localhost:2181 --alter \
-      --add-config 'SCRAM-SHA-256=[password={{ item.value['password'] }}]' \
-      --entity-type users --entity-name {{ item.value['principal'] }}
-  loop: "{{ sasl_scram_users|dict2items }}"
-  delegate_to: "{{ groups['zookeeper'][0] }}"
-  run_once: true
-  when: "'SCRAM-SHA-256' in kafka_broker_sasl_enabled_mechanisms"
+    - restart kafka
 
 - name: Deploy JMX Exporter Config File
   copy:
@@ -120,7 +100,7 @@
 
 - name: Create Service Override Directory
   file:
-    path: "{{kafka_broker.systemd_override | dirname }}"
+    path: "{{kafka_broker.systemd_override}}"
     owner: "{{kafka_broker.user}}"
     group: "{{kafka_broker.group}}"
     state: directory
@@ -129,13 +109,13 @@
 - name: Write Service Overrides
   template:
     src: override.conf.j2
-    dest: "{{ kafka_broker.systemd_override }}"
+    dest: "{{kafka_broker.systemd_override}}/override.conf"
     mode: 0640
     owner: "{{kafka_broker.user}}"
     group: "{{kafka_broker.group}}"
   notify:
     - reload systemd
-    - Restart Kafka
+    - restart kafka
 
 - name: Tune virtual memory settings
   lineinfile:
@@ -148,13 +128,13 @@
 
 - name: Certs were Updated - Trigger Restart
   command: /bin/true
-  notify: Restart Kafka
+  notify: restart kafka
   when: certs_updated|bool
 
 - meta: flush_handlers
 
 - name: Start Kafka Broker Service
   systemd:
-    name: "{{kafka_broker_service_name}}"
-    enabled: yes
-    state: started
+    name: "{{kafka_broker.service_name}}"
+    enabled: "{{kafka_broker.systemd.enabled}}"
+    state: "{{kafka_broker.systemd.state}}"
