--- a/roles/confluent.kafka_rest/handlers/main.yml
+++ b/roles/confluent.kafka_rest/handlers/main.yml
@@ -1,5 +1,6 @@
----
+- name: reload systemd
+  command: systemctl daemon-reload
 - name: restart kafka-rest
   systemd:
-    name: "{{kafka_rest_service_name}}"
+    name: "{{kafka_rest.service_name}}"
     state: restarted
