--- a/roles/confluent.ksql/handlers/main.yml
+++ b/roles/confluent.ksql/handlers/main.yml
@@ -1,5 +1,6 @@
----
+- name: reload systemd
+  command: systemctl daemon-reload
 - name: restart ksql
   systemd:
-    name: "{{ksql_service_name}}"
+    name: "{{ksql.service_name}}"
     state: restarted
