--- a/roles/confluent.ksql/tasks/main.yml
+++ b/roles/confluent.ksql/tasks/main.yml
@@ -1,14 +1,15 @@
 # Install Packages
 - name: Install the KSQL Packages
   yum:
-    name: "{{item}}{{confluent_package_redhat_suffix}}"
+    name: "{{item}}-{{confluent.package_version}}"
     state: latest
   loop: "{{ksql_packages}}"
   when: ansible_os_family == "RedHat"
 
 - name: Install the KSQL Packages
   apt:
-    name: "{{item}}{{confluent_package_debian_suffix}}"
+    name: "{{item}}={{confluent.package_version}}"
+    update_cache: yes
   loop: "{{ksql_packages}}"
   when: ansible_os_family == "Debian"
 
@@ -24,23 +25,13 @@
     system: yes
     group: "{{ksql.group}}"
 
-- import_role:
-    name: confluent.ssl
-  vars:
-    truststore_storepass: "{{ksql_truststore_storepass}}"
-    truststore_path: "{{ksql_truststore_path}}"
-    keystore_path: "{{ksql_keystore_path}}"
-    keystore_storepass: "{{ksql_keystore_storepass}}"
-    keystore_keypass: "{{ksql_keystore_keypass}}"
-  when: ksql_ssl_enabled|bool or kafka_broker_listeners[ksql_kafka_listener_name]['ssl_enabled'] | default(ssl_enabled) | bool
-
 - name: Create Keytabs Directory
   file:
     path: "{{kerberos.keytab_dir}}"
     group: "{{ksql.group}}"
     mode: '650'
     recurse: yes
-  when: kafka_broker_listeners[ksql_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == 'kerberos'
 
 - name: Copy in Keytab File
   copy:
@@ -49,13 +40,13 @@
     mode: '600'
     owner: "{{ksql.user}}"
     group: "{{ksql.group}}"
-  when: kafka_broker_listeners[ksql_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == 'kerberos'
   notify:
     - restart ksql
 
 - name: Change streams directory ownership
   file:
-    path: "{{ksql_streams_state_dir}}"
+    path: "{{ksql.streamsDataDir}}"
     owner: "{{ksql.user}}"
     group: "{{ksql.group}}"
     state: directory
@@ -92,17 +83,17 @@
 - name: Ksql Jaas Config
   template:
     src: ksql-server_jaas.conf.j2
-    dest: "{{ksql.jaas_file}}"
+    dest: "{{ksql_jaas_file}}"
     mode: 0640
     owner: "{{ksql.user}}"
     group: "{{ksql.group}}"
-  when: kafka_broker_listeners[ksql_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == "kerberos"
   notify:
     - restart ksql
 
 - name: Create Service Override Directory
   file:
-    path: "{{ksql.systemd_override | dirname}}"
+    path: "{{ksql.systemd_override}}"
     owner: "{{ksql.user}}"
     group: "{{ksql.group}}"
     state: directory
@@ -111,7 +102,7 @@
 - name: Write Service Overrides
   template:
     src: override.conf.j2
-    dest: "{{ksql.systemd_override}}"
+    dest: "{{ksql.systemd_override}}/override.conf"
     mode: 0640
     owner: "{{ksql.user}}"
     group: "{{ksql.group}}"
@@ -128,6 +119,6 @@
 
 - name: Start Ksql Service
   systemd:
-    name: "{{ksql_service_name}}"
-    enabled: yes
-    state: started
+    name: "{{ksql.service_name}}"
+    enabled: "{{ksql.systemd.enabled}}"
+    state: "{{ksql.systemd.state}}"
