--- a/roles/confluent.schema_registry/handlers/main.yml
+++ b/roles/confluent.schema_registry/handlers/main.yml
@@ -1,5 +1,6 @@
----
+- name: reload systemd
+  command: systemctl daemon-reload
 - name: restart schema-registry
   systemd:
-    name: "{{schema_registry_service_name}}"
+    name: "{{schema_registry.service_name}}"
     state: restarted
