--- a/roles/confluent.schema_registry/tasks/main.yml
+++ b/roles/confluent.schema_registry/tasks/main.yml
@@ -1,14 +1,15 @@
 # Install Packages
 - name: Install the Schema Registry Packages
   yum:
-    name: "{{item}}{{confluent_package_redhat_suffix}}"
+    name: "{{item}}-{{confluent.package_version}}"
     state: latest
   loop: "{{schema_registry_packages}}"
   when: ansible_os_family == "RedHat"
 
 - name: Install the Schema Registry Packages
   apt:
-    name: "{{item}}{{confluent_package_debian_suffix}}"
+    name: "{{item}}={{confluent.package_version}}"
+    update_cache: yes
   loop: "{{schema_registry_packages}}"
   when: ansible_os_family == "Debian"
 
@@ -24,23 +25,13 @@
     system: yes
     group: "{{schema_registry.group}}"
 
-- import_role:
-    name: confluent.ssl
-  vars:
-    truststore_storepass: "{{schema_registry_truststore_storepass}}"
-    truststore_path: "{{schema_registry_truststore_path}}"
-    keystore_path: "{{schema_registry_keystore_path}}"
-    keystore_storepass: "{{schema_registry_keystore_storepass}}"
-    keystore_keypass: "{{schema_registry_keystore_keypass}}"
-  when: schema_registry_ssl_enabled|bool or kafka_broker_listeners[schema_registry_kafka_listener_name]['ssl_enabled'] | default(ssl_enabled) | bool
-
 - name: Create Keytabs Directory
   file:
     path: "{{kerberos.keytab_dir}}"
     group: "{{schema_registry.group}}"
     mode: '650'
     recurse: yes
-  when: kafka_broker_listeners[schema_registry_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == 'kerberos'
 
 - name: Copy in Keytab File
   copy:
@@ -49,7 +40,7 @@
     mode: '600'
     owner: "{{schema_registry.user}}"
     group: "{{schema_registry.group}}"
-  when: kafka_broker_listeners[schema_registry_kafka_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol == 'GSSAPI'
+  when: sasl_protocol == 'kerberos'
 
 - name: Create Schema Registry Config
   template:
@@ -81,7 +72,7 @@
 
 - name: Create Service Override Directory
   file:
-    path: "{{schema_registry.systemd_override | dirname}}"
+    path: "{{schema_registry.systemd_override}}"
     owner: "{{schema_registry.user}}"
     group: "{{schema_registry.group}}"
     state: directory
@@ -90,7 +81,7 @@
 - name: Write Service Overrides
   template:
     src: override.conf.j2
-    dest: "{{schema_registry.systemd_override}}"
+    dest: "{{schema_registry.systemd_override}}/override.conf"
     mode: 0640
     owner: "{{schema_registry.user}}"
     group: "{{schema_registry.group}}"
@@ -107,6 +98,6 @@
 
 - name: Start Schema Registry Service
   systemd:
-    name: "{{schema_registry_service_name}}"
-    enabled: yes
-    state: started
+    name: "{{schema_registry.service_name}}"
+    enabled: "{{schema_registry.systemd.enabled}}"
+    state: "{{schema_registry.systemd.state}}"
